--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -32,6 +32,10 @@
 <script src="../vendors/leaflet.markercluster/leaflet.markercluster.js"></script>
 <script src="../vendors/leaflet.tilelayer.colorfilter/leaflet-tilelayer-colorfilter.min.js"></script>
 <script src="../assets/js/ecommerce-dashboard.js"></script>
+<!-- file uploader -->
+<script src="../vendors/dropzone/dropzone.js"></script>
+<!-- datepicker -->
+<script src="assets/js/flatpickr.js"></script>
 
 </body>
 
