--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -110,6 +110,10 @@
       href="../vendors/leaflet.markercluster/MarkerCluster.Default.css"
       rel="stylesheet"
     />
+    <!-- for file upload -->
+    <link href="../vendors/dropzone/dropzone.min.css" rel="stylesheet" />
+    <!-- for datepicker -->
+    <link href="../vendors/flatpickr/flatpickr.min.css" rel="stylesheet" />
   </head>
 
   <body>
