--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -83,7 +83,7 @@
                   class="uil fs-0 uil-angle-right lh-1 dropdown-indicator-icon"
                 ></span
                 ><span
-                  ><span class="me-2 uil" data-feather="book"></span>Daily
+                  ><span class="me-2 uil" data-feather="book"></span>Patrol
                   Report</span
                 >
               </div>
