--- a/views/sign-in.ejs
+++ b/views/sign-in.ejs
@@ -65,6 +65,9 @@
         <a href="/home" role="button" class="btn btn-primary w-100 mb-3"
           >Sign In</a
         >
+        <div class="text-center">
+          <a class="fs--1 fw-bold" href="/sign-up">Create an account</a>
+        </div>
       </div>
     </div>
   </div>
