--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -116,5 +116,5 @@
     <link href="../vendors/flatpickr/flatpickr.min.css" rel="stylesheet" />
   </head>
 
-  <body>
+  <body class="scrollbar-overlay">
     <main id="top">
