--- a/views/sign-in.ejs
+++ b/views/sign-in.ejs
@@ -7,7 +7,7 @@
   <div class="container">
     <div class="row flex-center min-vh-100 py-5">
       <div class="col-sm-10 col-md-8 col-lg-5 col-xl-5 col-xxl-3">
-        <a class="d-flex flex-center text-decoration-none mb-4" href="/">
+        <a class="d-flex flex-center text-decoration-none mb-5" href="/">
           <div class="d-flex align-items-center fw-bolder fs-5 d-inline-block">
             <img
               src="../../../assets/img/icons/logo.png"
@@ -16,55 +16,78 @@
             />
           </div>
         </a>
-        <div class="text-center mb-7">
+        <div class="text-center mb-5">
           <h3 class="text-1000">Sign In</h3>
           <p class="text-700">Get access to your account</p>
         </div>
-        <div class="mb-3 text-start">
-          <label class="form-label" for="email">Email address</label>
-          <div class="form-icon-container">
-            <input
-              class="form-control form-icon-input"
-              id="email"
-              type="email"
-              placeholder="name@example.com"
-            /><span class="fas fa-user text-900 fs--1 form-icon"></span>
-          </div>
-        </div>
-        <div class="mb-3 text-start">
-          <label class="form-label" for="password">Password</label>
-          <div class="form-icon-container">
-            <input
-              class="form-control form-icon-input"
-              id="password"
-              type="password"
-              placeholder="Password"
-            /><span class="fas fa-key text-900 fs--1 form-icon"></span>
-          </div>
-        </div>
-        <div class="row flex-between-center mb-7">
-          <div class="col-auto">
-            <div class="form-check mb-0">
+
+        <form
+          action="/sign-in"
+          method="post"
+          class="needs-validation"
+          novalidate="novalidate"
+        >
+          <div class="mb-3 text-start">
+            <label class="form-label" for="email">Username</label>
+            <div class="input-group">
+              <span class="input-group-text" id="basic-addon1">PB</span>
               <input
-                class="form-check-input"
-                id="basic-checkbox"
-                type="checkbox"
-                checked="checked"
+                class="form-control"
+                id="username"
+                name="username"
+                type="text"
+                placeholder="Username"
+                required=""
               />
-              <label class="form-check-label mb-0" for="basic-checkbox"
-                >Remember me</label
+              <div class="valid-feedback">Looks good!</div>
+              <div class="invalid-feedback">This is required</div>
+            </div>
+          </div>
+          <div class="mb-3 text-start">
+            <label class="form-label" for="password">Password</label>
+            <div class="form-icon-container">
+              <input
+                class="form-control form-icon-input"
+                id="password"
+                type="password"
+                name="password"
+                placeholder="Password"
+                required=""
+              /><span class="fas fa-key text-900 fs--1 form-icon"></span>
+              <div class="valid-feedback">Looks good!</div>
+              <div class="invalid-feedback">This is required</div>
+            </div>
+          </div>
+          <div class="row flex-between-center mb-7">
+            <div class="col-auto">
+              <div class="form-check mb-0">
+                <input
+                  class="form-check-input"
+                  id="basic-checkbox"
+                  type="checkbox"
+                  checked="checked"
+                />
+                <label class="form-check-label mb-0" for="basic-checkbox"
+                  >Remember me</label
+                >
+              </div>
+            </div>
+            <div class="col-auto">
+              <a class="fs--1 fw-semi-bold" href="/forgot-password"
+                >Forgot Password?</a
               >
             </div>
           </div>
-          <div class="col-auto">
-            <a class="fs--1 fw-semi-bold" href="/forgot-password"
-              >Forgot Password?</a
-            >
-          </div>
-        </div>
-        <a href="/home" role="button" class="btn btn-primary w-100 mb-3"
-          >Sign In</a
-        >
+
+          <button
+            class="btn btn-primary w-100 mb-3"
+            type="submit"
+            name="submit"
+          >
+            Sign In
+          </button>
+        </form>
+
         <div class="text-center">
           <a class="fs--1 fw-bold" href="/sign-up">Create an account</a>
         </div>
@@ -89,4 +112,4 @@
 <!--    End of Main Content-->
 <!-- ===============================================-->
 
-<%- include("partials/footer") %>
+<%- include("partials/footer-startup") %>
