--- a/views/patrol-report-view.ejs
+++ b/views/patrol-report-view.ejs
@@ -3,8 +3,7 @@
 <div class="content">
   <nav class="mb-2" aria-label="breadcrumb">
     <ol class="breadcrumb mb-0">
-      <li class="breadcrumb-item active">Daily Report</li>
-      <li class="breadcrumb-item active">Unit Patrol</li>
+      <li class="breadcrumb-item active">Patrol Report</li>
       <li class="breadcrumb-item active">View</li>
     </ol>
   </nav>
@@ -16,13 +15,13 @@
       <div class="row mb-4 gx-6 gy-3 align-items-center">
         <div class="col-auto">
           <h2 class="mb-0">
-            Daily Report<span class="fw-normal text-700 ms-3">(total amount)</span>
+            Petrol Report<span class="fw-normal text-700 ms-3">(total amount)</span>
           </h2>
         </div>
         <div class="col-auto">
           <a
             class="btn btn-primary px-5"
-            href="../../apps/project-management/create-new.html"
+            href="/patrol-report/submit"
             ><i class="fa-solid fa-plus me-2"></i>Add new report</a
           >
         </div>
