Patrol report submit can be inserted into database

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -32,8 +32,15 @@
     <a class="navbar-brand me-1 me-sm-3" href="/">
       <div class="d-flex align-items-center">
         <div class="d-flex align-items-center">
-          <img class="d-lg-none d-md-none" src="../assets/img/icons/logo.png" alt="logo" width="38" />
-          <p class="logo-text ms-2 d-none d-sm-block fs-2 d-sm-none d-lg-block">Auxiliary Police</p>
+          <img
+            class="d-lg-none"
+            src="../assets/img/icons/logo.png"
+            alt="logo"
+            width="38"
+          />
+          <p class="logo-text ms-2 d-none d-sm-block fs-2 d-sm-none d-lg-block">
+            Auxiliary Police
+          </p>
         </div>
       </div>
     </a>
@@ -270,7 +277,11 @@
                 />
               </div>
               <h5 class="mt-2 text-black"><%= currentFullName %></h5>
-              <h6 class="badge badge-phoenix mt-2 text-black badge-phoenix-primary">PB<%= currentUser %></h6>
+              <h6
+                class="badge badge-phoenix mt-2 text-black badge-phoenix-primary"
+              >
+                PB<%= currentUser %>
+              </h6>
             </div>
           </div>
 
