report back end update

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,7 +8,7 @@
     <!-- ===============================================-->
     <!--    Document Title-->
     <!-- ===============================================-->
-    <title>AuxiliaryPolice</title>
+    <title>LAKMNS</title>
 
     <!-- ===============================================-->
     <!--    Favicons-->
