--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en-US" dir="ltr">
   <head>
     <meta charset="utf-8" />
@@ -117,4 +117,6 @@
   </head>
 
   <body class="scrollbar-overlay">
-    <main id="top">
+    <main id="top"></main>
+  </body>
+</html>
